uncomment line276-281 to enable local enc-dec-play function.[narrow band]

--- a/MDK-ARM/TIM3_ADC/TIM3_ADC.build_log.htm
+++ b/MDK-ARM/TIM3_ADC/TIM3_ADC.build_log.htm
@@ -25,96 +25,7 @@ I:\embedded\stm32\stm32-speex-canbus\MDK-ARM\TIM3_ADC.uvprojx
 Project File Date:  12/06/2018
 
 <h2>Output:</h2>
-Rebuild target 'TIM3_ADC'
-assembling startup_stm32f407xx.s...
-compiling stm32f4xx_hal_adc.c...
-compiling stm32f4xx_hal_adc_ex.c...
-compiling stm32f4xx_hal_can.c...
-compiling stm32f4xx_hal_dac.c...
-compiling stm32f4xx_hal_dac_ex.c...
-compiling stm32f4xx_hal_tim.c...
-compiling stm32f4xx_hal_tim_ex.c...
-compiling stm32f4xx_hal_uart.c...
-compiling stm32f4xx_hal_rcc.c...
-compiling stm32f4xx_hal_rcc_ex.c...
-compiling stm32f4xx_hal_flash.c...
-compiling stm32f4xx_hal_flash_ex.c...
-compiling stm32f4xx_hal_flash_ramfunc.c...
-compiling stm32f4xx_hal_gpio.c...
-compiling stm32f4xx_hal_dma_ex.c...
-compiling stm32f4xx_hal_dma.c...
-compiling stm32f4xx_hal_pwr.c...
-compiling stm32f4xx_hal_pwr_ex.c...
-compiling stm32f4xx_hal_cortex.c...
-compiling stm32f4xx_hal.c...
-compiling system_stm32f4xx.c...
-compiling key.c...
-compiling malloc.c...
-compiling bits.c...
-compiling cb_search.c...
-compiling exc_5_64_table.c...
-compiling exc_5_256_table.c...
-compiling exc_8_128_table.c...
-compiling exc_10_16_table.c...
-compiling exc_10_32_table.c...
-compiling exc_20_32_table.c...
-compiling filters.c...
-compiling gain_table.c...
-compiling gain_table_lbr.c...
-compiling hexc_10_32_table.c...
-compiling hexc_table.c...
-compiling high_lsp_tables.c...
-compiling kiss_fft.c...
-compiling kiss_fftr.c...
-compiling lpc.c...
-compiling lsp.c...
-compiling lsp_tables_nb.c...
-compiling ltp.c...
-compiling modes.c...
-compiling nb_celp.c...
-compiling quant_lsp.c...
-compiling sb_celp.c...
-..\SPEEX\libspeex\sb_celp.c(532): warning:  #550-D: variable "mode" was set but never used
-     const SpeexSBMode *mode;
-..\SPEEX\libspeex\sb_celp.c(535): warning:  #177-D: variable "e_low" was declared but never referenced
-     spx_word16_t e_low=0, e_high=0;
-..\SPEEX\libspeex\sb_celp.c(535): warning:  #177-D: variable "e_high" was declared but never referenced
-     spx_word16_t e_low=0, e_high=0;
-..\SPEEX\libspeex\sb_celp.c: 3 warnings, 0 errors
-compiling smallft.c...
-compiling speex.c...
-compiling speex_callbacks.c...
-compiling speex_header.c...
-compiling stereo.c...
-..\SPEEX\include\speex/speex_stereo.h(64): warning:  #1295-D: Deprecated declaration speex_stereo_state_init - give arg types
-  SpeexStereoState *speex_stereo_state_init();
-..\SPEEX\libspeex\stereo.c: 1 warning, 0 errors
-compiling testenc.c...
-compiling vbr.c...
-compiling vorbis_psy.c...
-compiling vq.c...
-compiling window.c...
-compiling trcKernelPort.c...
-compiling trcSnapshotRecorder.c...
-compiling trcStreamingRecorder.c...
-compiling SEGGER_RTT.c...
-compiling trcStreamingPort.c...
-compiling main.c...
-../Inc/can.h(79): warning:  #1295-D: Deprecated declaration CAN1_USER_CONFIG - give arg types
-  uint8_t CAN1_USER_CONFIG();
-../Src/main.c(122): warning:  #177-D: variable "frame_size" was declared but never referenced
-        int frame_size=0;
-../Src/main.c: 2 warnings, 0 errors
-compiling gpio.c...
-compiling adc.c...
-compiling can.c...
-../Inc/can.h(79): warning:  #1295-D: Deprecated declaration CAN1_USER_CONFIG - give arg types
-  uint8_t CAN1_USER_CONFIG();
-../Src/can.c(155): warning:  #177-D: variable "res" was declared but never referenced
-      uint8_t res;
-../Src/can.c: 2 warnings, 0 errors
-compiling dac.c...
-compiling dma.c...
+Build target 'TIM3_ADC'
 compiling freertos.c...
 ../Inc/can.h(79): warning:  #1295-D: Deprecated declaration CAN1_USER_CONFIG - give arg types
   uint8_t CAN1_USER_CONFIG();
@@ -139,26 +50,9 @@ compiling freertos.c...
 ../Src/freertos.c(587): warning:  #550-D: variable "can_audio_step" was set but never used
         static uint8_t can_audio_step=0;
 ../Src/freertos.c: 11 warnings, 0 errors
-compiling tim.c...
-compiling usart.c...
-compiling stm32f4xx_it.c...
-../Src/stm32f4xx_it.c(188): warning:  #223-D: function "xPortSysTickHandler" declared implicitly
-      xPortSysTickHandler();
-../Src/stm32f4xx_it.c: 1 warning, 0 errors
-compiling stm32f4xx_hal_msp.c...
-compiling stm32f4xx_hal_timebase_TIM.c...
-compiling heap_4.c...
-compiling port.c...
-compiling croutine.c...
-compiling event_groups.c...
-compiling list.c...
-compiling queue.c...
-compiling tasks.c...
-compiling timers.c...
-compiling cmsis_os.c...
 linking...
-Program Size: Code=46590 RO-data=14626 RW-data=360 ZI-data=1219376  
-"TIM3_ADC\TIM3_ADC.axf" - 0 Error(s), 20 Warning(s).
+Program Size: Code=46630 RO-data=14626 RW-data=360 ZI-data=1219376  
+"TIM3_ADC\TIM3_ADC.axf" - 0 Error(s), 11 Warning(s).
 
 <h2>Software Packages used:</h2>
 
